    (Liang Xie via harsh)

    HDFS-7608: hdfs dfsclient newConnectedPeer has no write
    timeout (Xiaoyu Yao via Colin P. McCabe)

    HDFS-7928. Scanning blocks from disk during rolling upgrade startup takes
    a lot of time if disks are busy. Contributed by Rushabh Shah.

    HDFS-7933. fsck should also report decommissioning replicas.
    (Xiaoyu Yao via cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-8219. setStoragePolicy with folder behavior is different after cluster restart.
    (surendra singh lilhore via Xiaoyu Yao)

Release 2.7.0

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HDFS-3107. Introduce truncate. (Plamen Jeliazkov via shv)

    HDFS-7056. Snapshot support for truncate. (Plamen Jeliazkov and shv)

    HDFS-6673. Add delimited format support to PB OIV tool. (Eddy Xu via wang)

    HDFS-7655. Expose truncate API for Web HDFS. (yliu)

  IMPROVEMENTS

    HDFS-7470. SecondaryNameNode need twice memory when calling
    reloadFromImageFile. (zhaoyunjiong via cnauroth)

    HDFS-7606. Fix potential NPE in INodeFile.getBlocks(). (Byron Wong via shv)

    HDFS-7738. Revise the exception message for recover lease; add more truncate
    tests such as truncate with HA setup, negative tests, truncate with other
    operations and multiple truncates.  (szetszwo)

    HDFS-7058. Tests for truncate CLI. (Dasha Boudnik via shv)

    HDFS-7760. Document truncate for WebHDFS. (shv)

    HDFS-7531. Improve the concurrent access on FsVolumeList (Lei Xu via Colin
    P. McCabe)

    HADOOP-11648. Set DomainSocketWatcher thread name explicitly.
    (Liang Xie via ozawa)

    HDFS-7706. Switch BlockManager logging to use slf4j. (wang)

    HDFS-7491. Add incremental blockreport latency to
    DN metrics. Contributed by Ming Ma.

    HDFS-7712. Switch blockStateChangeLog to use slf4j. (wang)

    HDFS-6860. BlockStateChange logs are too noisy. (Chang Li and xyao via xyao)

    HDFS-7890. Improve information on Top users for metrics in